# neomake

./: .gitignore  README.md  neomake.py  nmprofiles.py  pyproject.toml
demo/demo1/: lib.c  main.c  nmake  nmake.py
demo/demo1/src/: lib.c  main.c
src/neomake/: __init__.py  neomake.py  nmprofiles.py
