[project]
name = "neomake"
version = "0.0.2"
authors = [
  { name="Random World Studio", email="pointer-to-bios@outlook.com" },
]
description = "A new make script for builds."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pointertobios/neomake.git"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
